==> funTechCn/fake-ams-lite/src/BambuBus.cpp <==
#include "BambuBus.h"
#include "CRC16.h"
#include "CRC8.h"
#define BambuBus_address_AMS08 ((uint16_t)0x700)
#define BambuBus_address_AMSLite ((uint16_t)0x1200)
#define SERSIAL_NUMBER  long_packge_version_serial_number_AMS_lite
#define VERSION_NAME long_packge_version_version_and_name_AMS_lite
#include "flash.h" // 包含用于Flash操作的函数
#define use_flash_addr (256 * 1024)

void send_uart(const unsigned char *data, uint16_t length)
{
    TX_IDLE = false;
    digitalWrite(BambuBus_pin_de, 1);
    uart_write_blocking(BambuBus_uart, data, length);
    // if (need_debug)
    // {
    //     DEBUG_hex(data, length);
    //     // need_debug = false;
    // }
    uart_tx_wait_blocking(BambuBus_uart);
    digitalWrite(BambuBus_pin_de, 0);
    TX_IDLE = true;
}

void BambuBUS_UART_Init(uint32_t baudrate)
{
    // 初始化UART
    uart_init(BambuBus_uart, baudrate);
    // 将引脚设置为UART功能
    gpio_set_function(BambuBus_pin_tx, GPIO_FUNC_UART);
    gpio_set_function(BambuBus_pin_rx, GPIO_FUNC_UART);
    // 关闭硬件流
    uart_set_hw_flow(BambuBus_uart, false, false);
    // 设置奇偶位
    uart_set_format(BambuBus_uart, 8, 1, UART_PARITY_EVEN);
    // FIFO
    uart_set_fifo_enabled(BambuBus_uart, true);
    // 注册中断处理函数
    irq_set_exclusive_handler(BambuBus_uart_IRQ, on_uart_rx);
    irq_set_enabled(BambuBus_uart_IRQ, true);
    // 开启接收中断
    uart_set_irq_enables(BambuBus_uart, true, false);
}

package_type get_packge_type(unsigned char *buf, int length)
{
    if (package_check_crc16(buf, length) == false)
    {
        return BambuBus_package_ERROR;
    }
    if (buf[1] == 0xC5)
    {

        switch (buf[4])
        {
        case 0x03:
            return BambuBus_package_filament_motion_short;
        case 0x04:
            return BambuBus_package_filament_motion_long;
        case 0x05:
            return BambuBus_package_online_detect;
        case 0x06:
            return BambuBus_package_REQx6;
        case 0x07:
            return BambuBus_package_NFC_detect;
        case 0x08:
            return BambuBus_package_set_filament;
        case 0x20:
            return BambuBus_package_heartbeat;
        default:
            return BambuBus_package_ETC;
        }
    }
    else if (buf[1] == 0x05)
    {
        Bambubus_long_package_analysis(buf, length, &printer_data_long);
        if (printer_data_long.target_address == BambuBus_address_AMS08)
        {
            printer_data_long.target_address = printer_data_long.target_address;
        }
        else if (printer_data_long.target_address == BambuBus_address_AMSLite)
        {
            printer_data_long.target_address = printer_data_long.target_address;
        }

        switch (printer_data_long.type)
        {
        case 0x21A:
            return BambuBus_long_package_MC_online;
        case 0x211:
            return BambuBus_longe_package_filament;
        case 0x103:
        case 0x402:
            return BambuBus_long_package_version;
        default:
            return BambuBus_package_ETC;
        }
    }
    return BambuBus_package_ERROR;
}

void send_for_long_packge_version(unsigned char *buf, int length)
{
    long_packge_data data;
    Bambubus_long_package_analysis(buf, length, &printer_data_long);
    uint8_t AMS_num = printer_data_long.datas[0];
    unsigned char *long_packge_version_serial_number;
    unsigned char *long_packge_version_version_and_name;

    if(printer_data_long.target_address == BambuBus_address_AMS08){
        long_packge_version_serial_number = long_packge_version_serial_number_AMS08;
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS08;
    }else if(printer_data_long.target_address == BambuBus_address_AMSLite){
        long_packge_version_serial_number = long_packge_version_serial_number_AMS_lite;
        long_packge_version_version_and_name = long_packge_version_version_and_name_AMS_lite;
    }else{
        return;
    }

    switch (printer_data_long.type)
    {
    case 0x402:

        // AMS_num = printer_data_long.datas[33];
        // data.datas = long_packge_version_serial_number;
        // data.data_length = sizeof(long_packge_version_serial_number);
        // data.datas[65] = AMS_num;

        /*AMS_num = printer_data_long.datas[33];
        data.datas = long_packge_version_serial_number;
        data.data_length = sizeof(long_packge_version_serial_number_AMS08);

        data.datas[65] = AMS_num;
        break;*/
        return;
    case 0x103:

        AMS_num = printer_data_long.datas[0];
        data.datas = long_packge_version_version_and_name;
        data.data_length = sizeof(long_packge_version_version_and_name_AMS08);
        data.datas[20] = AMS_num;
        break;
    default:
        return;
    }

    data.package_number = printer_data_long.package_number;
    data.type = printer_data_long.type;
    data.source_address = printer_data_long.target_address;
    data.target_address = printer_data_long.source_address;
    Bambubus_long_package_send(&data);
}

int BambuBus_run()
{
    int stu=0;//online_wait
    static uint64_t time_set=200;
    uint64_t timex=get_time64();
    if(timex>time_set)
    {
        stu=-1;//offline
    }
    if (BambuBus_have_data)
    {
        int data_length = BambuBus_have_data;
        BambuBus_have_data = 0;
        // need_debug = false;
        stu=1;//have_data
        time_set=timex+200;
        cmd = get_packge_type(buf_X, data_length);
        switch (cmd)
        {
        case BambuBus_package_heartbeat://心跳
            break;
        case BambuBus_package_filament_motion_short://
            send_for_Cxx(buf_X, data_length);
            break;
        case BambuBus_package_filament_motion_long:
            send_for_Dxx(buf_X, data_length);
            break;
        case BambuBus_package_online_detect:
            
            send_for_Fxx(buf_X, data_length);
            break;
        case BambuBus_package_REQx6:
            //send_for_REQx6(buf_X, data_length);
            break;
        case BambuBus_long_package_MC_online:
            send_for_long_packge_MC_online(buf_X, data_length);
            break;
        case BambuBus_longe_package_filament://读取耗材信息
            send_for_long_packge_filament(buf_X, data_length);
            break;
        case BambuBus_long_package_version:
            send_for_long_packge_version(buf_X, data_length);
            break;
        case BambuBus_package_NFC_detect:
            // send_for_NFC_detect(buf_X, data_length);
            break;
        case BambuBus_package_set_filament://设置耗材信息
            send_for_Set_filament(buf_X, data_length);
            break;
        default:
            break;
        }
    }
    if (Bambubus_need_to_save)
    {
        Bambubus_save();
        Bambubus_need_to_save = false;
    }
    // HAL_UART_Transmit(&use_Serial.handle,&s,1,1000);

    //NFC_detect_run();
    return stu;
}
